--- a/docs-markdown/package.json
+++ b/docs-markdown/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/Microsoft/vscode-docs-authoring/issues"
   },
   "engines": {
-    "vscode": "^1.22.0"
+    "vscode": "^1.32.0"
   },
   "repository": {
     "url": "https://github.com/Microsoft/vscode-docs-authoring.git"
@@ -26,7 +26,7 @@
     "onLanguage:markdown",
     "onLanguage:yaml"
   ],
-  "main": "./out/src/extension",
+  "main": "./dist/extension",
   "contributes": {
     "commands": [
       {
@@ -650,15 +650,16 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "tsc -p ./",
-    "compile": "tsc -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install",
+    "vscode:prepublish": "webpack --mode production",
+    "webpack": "webpack --mode development",
+    "webpack-dev": "webpack --mode development --watch",
+    "test-compile": "tsc -p ./",
     "test-core": "node ./node_modules/vscode/bin/test",
     "test": "jest",
     "lint": "tslint -c tslint.json 'src/**/*.ts'"
   },
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "diff": "^4.0.1",
     "file-exists": "^5.0.1",
     "fs-exists-sync": "^0.1.0",
@@ -686,9 +687,12 @@
     "jest-junit": "^6.3.0",
     "octicons": "^7.3.0",
     "ts-jest": "^24.0.2",
+    "ts-loader": "^6.2.1",
     "tslint": "^5.20.1",
     "typescript": "3.4.5",
-    "vscode": "^1.1.33"
+    "vscode": "^1.1.33",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   },
   "jest": {
     "verbose": true,
