--- a/docs-markdown/package.json
+++ b/docs-markdown/package.json
@@ -4,14 +4,14 @@
   "description": "Docs Markdown Extension",
   "icon": "images/docs-logo-ms.png",
   "aiKey": "0a0e5961-85c2-451a-bce8-6a54e37c93be",
-  "version": "0.2.61",
+  "version": "0.2.53",
   "publisher": "docsmsft",
   "homepage": "https://github.com/Microsoft/vscode-docs-authoring/tree/master/docs-markdown",
   "bugs": {
     "url": "https://github.com/Microsoft/vscode-docs-authoring/issues"
   },
   "engines": {
-    "vscode": "^1.43.0"
+    "vscode": "^1.22.0"
   },
   "repository": {
     "url": "https://github.com/Microsoft/vscode-docs-authoring.git"
@@ -41,11 +41,6 @@
       {
         "command": "sortMasterRedirectionFile",
         "title": "Sort master redirection file",
-        "category": "Docs"
-      },
-      {
-        "command": "applyRedirectDaisyChainResolution",
-        "title": "Resolve redirection file daisy-chains",
         "category": "Docs"
       },
       {
@@ -201,7 +196,8 @@
       {
         "command": "updateImplicitMetadataValues",
         "title": "Update Implicit Metadata Values",
-        "category": "Docs"
+        "category": "Docs",
+        "enablement": "resourceLangId == markdown"
       },
       {
         "command": "sortSelectionAscending",
@@ -231,7 +227,8 @@
       {
         "command": "updateImplicitMetadataValues",
         "title": "Update Implicit Metadata Values",
-        "category": "Docs"
+        "category": "Docs",
+        "enablement": "resourceLangId == markdown"
       }
     ],
     "menus": {
@@ -245,12 +242,12 @@
       ],
       "editor/context": [
         {
-          "when": "editorTextFocus && resourceLangId == markdown || resourceLangId == yaml",
+          "when": "editorTextFocus",
           "command": "updateMetadataDate",
           "group": "1_modification"
         },
         {
-          "when": "editorTextFocus && resourceLangId == markdown || resourceLangId == yaml",
+          "when": "editorTextFocus",
           "command": "updateImplicitMetadataValues",
           "group": "1_modification"
         },
@@ -297,10 +294,6 @@
         },
         {
           "command": "sortMasterRedirectionFile",
-          "group": "Docs"
-        },
-        {
-          "command": "applyRedirectDaisyChainResolution",
           "group": "Docs"
         },
         {
@@ -465,35 +458,12 @@
     },
     "configuration": {
       "type": "object",
-      "title": "Docs Markdown",
+      "title": "Docs Markdown Extension Configuration",
       "properties": {
-        "markdown.replaceSmartQuotes": {
-          "type": "boolean",
-          "default": true,
-          "markdownDescription": "When `true`, automatically replace smart quotes (`“, ”, ‘, and ’`) with standard quotes (`\" and '`) in markdown files. This feature extends to other characters as well, i.e.; (`©, ™, ®, •`, subscript and superscript characters). This is useful when pasting text from Word documents."
-        },
-        "markdown.docsetName": {
-          "type": "string",
-          "default": "",
-          "markdownDescription": "The name of the docset, most often the route segment immediately following the locale in the URL, (i.e.; https://docs.microsoft.com/en-us/azure/ would be 'azure'). Sometimes this value is specified in the `docfx.json` file under the `build/dest` node.",
-          "scope": "window"
-        },
-        "markdown.docsetRootFolderName": {
-          "type": "string",
-          "default": "",
-          "markdownDescription": "The name of the docset root folder. Sometimes this value is specified in the `docfx.json` file under the `build/resource/src` node.",
-          "scope": "window"
-        },
-        "markdown.omitDefaultJsonProperties": {
-          "type": "boolean",
-          "default": false,
-          "markdownDescription": "When `true` omits default JSON values when serializing objects, i.e.; the `.openpublishing.redirection.json` file would have the `redirect_document_id` properties omitted when they are `false`.",
-          "scope": "window"
-        },
         "markdown.allAvailableLanguages": {
           "type": "boolean",
           "default": false,
-          "markdownDescription": "Provide all available languages when suggesting code-fence language identifiers. Overrides [Markdown: Docset Languages](#markdown.docsetLanguages) setting."
+          "markdownDescription": "Provide all available languages when suggesting code-fence language identifiers. Overrides `markdown.docsetLanguages` setting."
         },
         "markdown.docsetLanguages": {
           "type": [
@@ -501,78 +471,210 @@
             "null"
           ],
           "title": "Language Identifiers",
-          "markdownDescription": "When the [Markdown: All Available Languages](#markdown.allAvailableLanguages) flag is set to `false`, the suggested completion list displayed when typing an opening code-block (` ``` `) is filtered to the provided language identifiers.",
+          "markdownDescription": "When the \"All Available Languages\" (`markdown.allAvailableLanguages`) flag is set to `false`, the suggested completion list displayed when typing an opening code-block (` ``` `) is filtered to the provided language identifiers.",
           "items": {
             "type": "string",
             "enum": [
               ".NET Core CLI",
-              "Apache",
+              "1C",
+              "ABNF",
+              "Access logs",
+              "Ada",
               "ARM assembler",
+              "AVR assembler",
+              "ActionScript",
+              "Alan",
+              "ANTLR",
+              "AngelScript",
+              "Apache",
+              "AppleScript",
+              "Arcade",
+              "AsciiDoc",
+              "AspectJ",
               "ASPX",
               "ASP.NET (C#)",
               "ASP.NET (VB)",
+              "AutoHotkey",
+              "AutoIt",
+              "Awk",
+              "Axapta",
               "AzCopy",
               "Azure CLI",
               "Azure CLI (Interactive)",
               "Azure Powershell",
               "Azure Powershell (Interactive)",
               "Bash",
+              "Basic",
+              "BNF",
               "C",
               "C#",
               "C# (Interactive)",
               "C++",
               "C++/CX",
               "C++/WinRT",
+              "C/AL",
+              "Cache Object Script",
+              "CMake",
+              "Coq",
+              "CSP",
               "CSS",
+              "Cap’n Proto",
+              "Clojure",
+              "CoffeeScript",
+              "Crmsh",
+              "Crystal",
+              "Cypher (Neo4j)",
+              "D",
               "DAX Power BI",
+              "DNS Zone file",
               "DOS",
+              "Dart",
+              "Delphi",
+              "Diff",
+              "Django",
               "Dockerfile",
+              "dsconfig",
+              "DTS (Device Tree)",
+              "Dust",
+              "Dylan",
+              "EBNF",
+              "Elixir",
+              "Elm",
+              "Erlang",
+              "Excel",
+              "Extempore",
               "F#",
+              "FIX",
+              "Fortran",
+              "G-Code",
+              "Gams",
+              "GAUSS",
+              "GDScript",
+              "Gherkin",
+              "GN for Ninja",
               "Go",
+              "Golo",
               "Gradle",
               "Groovy",
-              "HashiCorp Configuration Language (HCL)",
               "HTML",
               "HTTP",
+              "Haml",
+              "Handlebars",
+              "Haskell",
+              "Haxe",
+              "Hy",
               "Ini",
+              "Inform7",
+              "IRPF90",
               "JSON",
               "Java",
               "JavaScript",
               "Kotlin",
               "Kusto",
+              "Leaf",
+              "Lasso",
+              "Less",
+              "LDIF",
+              "Lisp",
+              "LiveCode Server",
+              "LiveScript",
+              "Lua",
               "Makefile",
               "Markdown",
+              "Mathematica",
+              "Matlab",
+              "Maxima",
+              "Maya Embedded Language",
+              "Mercury",
+              "mIRC Scripting Language",
+              "Mizar",
               "Managed Object Format",
+              "Mojolicious",
+              "Monkey",
+              "Moonscript",
               "MS Graph (Interactive)",
+              "N1QL",
+              "NSIS",
               "Nginx",
-              "Node.js",
+              "Nimrod",
+              "Nix",
+              "OCaml",
               "Objective C",
-              "Odata",
+              "OpenGL Shading Language",
+              "OpenSCAD",
+              "Oracle Rules Language",
+              "Oxygene",
+              "PF",
               "PHP",
-              "PowerApps Formula",
+              "Parser3",
+              "Perl",
+              "Plaintext no highlight",
+              "Pony",
+              "PostgreSQL & PL/pgSQL",
               "PowerShell",
               "PowerShell (Interactive)",
+              "Processing",
+              "Prolog",
               "Properties",
               "Protocol Buffers",
+              "Puppet",
               "Python",
+              "Python profiler results",
               "Q#",
+              "Q",
+              "QML",
               "R",
               "Razor CSHTML",
-              "REST API",
+              "ReasonML",
+              "RenderMan RIB",
+              "RenderMan RSL",
+              "Roboconf",
+              "Robot Framework",
+              "RPM spec files",
               "Ruby",
+              "Rust",
+              "SAS",
+              "SCSS",
               "SQL",
+              "STEP Part 21",
               "Scala",
+              "Scheme",
+              "Scilab",
+              "Shape Expressions",
+              "Shell",
+              "Smali",
+              "Smalltalk",
               "Solidity",
+              "Stan",
+              "Stata",
+              "Structured Text",
+              "Stylus",
+              "SubUnit",
+              "Supercollider",
               "Swift",
-              "Transact-SQL",
+              "Tcl",
+              "Terraform (HCL)",
+              "Test Anything Protocol",
+              "TeX",
+              "Thrift",
+              "TOML",
+              "TP",
+              "Twig",
               "TypeScript",
               "VB.NET",
-              "VB for Applications",
               "VBScript",
-              "VSTS CLI",
+              "VHDL",
+              "Vala",
+              "Verilog",
+              "Vim Script",
+              "X++",
+              "x86 Assembly",
+              "XL",
+              "XQuery",
               "XAML",
               "XML",
-              "YAML"
+              "YAML",
+              "Zephir"
             ]
           },
           "minItems": 1,
@@ -601,6 +703,11 @@
           "default": false,
           "description": "Show the legacy toolbar in the bottom status bar.",
           "scope": "window"
+        },
+        "markdown.nagForUpdates": {
+          "type": "boolean",
+          "default": false,
+          "description": "Prompt to update ms.date when it's not up-to-date."
         },
         "markdown.addFrontMatterTitle": {
           "type": "boolean",
@@ -678,53 +785,76 @@
   },
   "scripts": {
     "vscode:prepublish": "tsc -p ./",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile",
-    "test": "node ./out/src/test/runTest.js",
+    "compile": "tsc -watch -p ./",
+    "postinstall": "node ./node_modules/vscode/bin/install",
+    "test-core": "node ./node_modules/vscode/bin/test",
+    "test": "jest",
     "lint": "tslint -c tslint.json 'src/**/*.ts'"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "diff": "^4.0.2",
+    "axios": "^0.19.0",
+    "diff": "^4.0.1",
     "file-exists": "^5.0.1",
     "fs-exists-sync": "^0.1.0",
     "glob": "^7.1.6",
-    "graceful-fs": "^4.2.3",
+    "graceful-fs": "^4.1.15",
     "js-yaml": "^3.13.1",
     "lodash.merge": "^4.6.2",
-    "matcher": "^1.1.1",
+    "markdownlint": "^0.11.0",
+    "matcher": "^1.0.0",
     "node-dir": "^0.1.17",
     "recursive-readdir": "^2.2.2",
-    "typescript-collections": "^1.3.3",
+    "typescript-collections": "^1.2.3",
     "vscode-extension-telemetry": "^0.1.1",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.11",
-    "@types/chai-spies": "^1.0.1",
-    "@types/glob": "^7.1.1",
+    "@types/glob": "^5.0.36",
     "@types/graceful-fs": "^2.0.30",
-    "@types/lodash.merge": "^4.6.6",
-    "@types/mocha": "^7.0.1",
-    "@types/node": "^12.12.32",
+    "@types/jest": "24.0.12",
+    "@types/lodash.merge": "^4.6.3",
+    "@types/node": "^7.10.9",
     "@types/node-dir": "0.0.32",
     "@types/recursive-readdir": "^2.2.0",
-    "@types/vscode": "^1.43.0",
     "@types/yamljs": "^0.2.30",
-    "chai": "^4.2.0",
-    "chai-spies": "^1.0.0",
-    "mocha": "^7.1.1",
-    "mocha-junit-reporter": "^1.23.3",
-    "mock-require": "^3.0.3",
-    "nyc": "^15.0.0",
-    "octicons": "^7.4.0",
-    "sinon": "^9.0.1",
-    "source-map-support": "^0.5.16",
-    "ts-node": "^8.8.1",
+    "jest": "^24.7.1",
+    "jest-junit": "^6.3.0",
+    "octicons": "^7.3.0",
+    "ts-jest": "^24.0.2",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.5",
-    "vscode-test": "^1.3.0"
+    "typescript": "3.4.5",
+    "vscode": "^1.1.33"
+  },
+  "jest": {
+    "verbose": true,
+    "preset": "ts-jest",
+    "roots": [
+      "<rootDir>/test",
+      "<rootDir>/src"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "json",
+      "node"
+    ],
+    "coverageReporters": [
+      "text-summary",
+      "cobertura",
+      "html"
+    ],
+    "reporters": [
+      "default",
+      "jest-junit"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*"
+    ]
+  },
+  "jest-junit": {
+    "output": "test-results-jest.xml",
+    "usePathForSuiteName": "true"
   },
   "license": "MIT"
 }
